# ai-art-shield

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  img_data.py  img_protection.py  main.py  manage.py  pyproject.toml  test_img_data.py  test_img_protection.py
ai_art_shield_project/: asgi.py  settings.py  urls.py  wsgi.py
protection_app/: apps.py  forms.py  models.py  services.py  urls.py  views.py
protection_app/migrations/: 0001_initial.py  0002_alter_protectedimage_uuid.py  0003_alter_protectedimage_protection_strength.py
protection_app/templates/protection_app/: upload_image.html
test_files/: not_an_image.txt  test_files.txt
test_files/output_files/: description.txt
